// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should render 1`] = `
<div>
  <div
    class="content isOpen"
    data-testid="profile-drawer"
  >
    <div
      class="profileHeader"
    >
      <div
        class="closeButton"
        role="button"
      >
        &gt; Close
      </div>
      <h2>
        Profile
      </h2>
    </div>
    <div
      class="profileBody"
    >
      <h3>
        foobar
        's statistics
      </h3>
      <div>
        <div>
          Total games played: 
          1
        </div>
        <div>
          Total time played (seconds): 
          9
          s
        </div>
        <div>
          <span>
            Latest 5 games summary:
          </span>
          <ul>
            <li>
              Won by
               
              <span
                class="hightlight"
              >
                column
              </span>
               
              in 
              <span
                class="hightlight"
              >
                13
              </span>
               
              turns (
              <span
                class="hightlight"
              >
                9
              </span>
               
              seconds)
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="profileFooter"
    >
      <button
        class="button"
        type="button"
      >
        Delete Profile
      </button>
    </div>
  </div>
</div>
`;

exports[`Profile should show empty state if no playerData given 1`] = `
<div>
  <div
    class="content isOpen"
    data-testid="profile-drawer"
  >
    <div
      class="profileHeader"
    >
      <div
        class="closeButton"
        role="button"
      >
        &gt; Close
      </div>
      <h2>
        Profile
      </h2>
    </div>
    <div
      class="profileError"
    >
      No record of this player yet. Please play some games first!
    </div>
  </div>
</div>
`;
